feat: initialize backend project with OAuth2 authentication, JWT security, and base frontend structure